--- a/index.html
+++ b/index.html
@@ -1,62 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Un título</title>
-  <!--Acá vamos a meter más metadatos, con la ayuda de https://megatags.co/-->
+  <meta name="viewport" conçtent="width=device-width, initial-scale=1">
+  <!-- COMMON TAGS -->
+  <meta charset="utf-8">
+<title>Mi web</title>
+<!-- Search Engine -->
+<meta name="description" content="Primeros pasos para hacer a mi página web">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Mi web">
+<meta itemprop="description" content="Primeros pasos para hacer a mi página web">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Mi web">
+<meta name="og:description" content="Primeros pasos para hacer a mi página web">
+<meta name="og:locale" content="es_CL">
+<meta name="og:type" content="website">
   <link href="normalize.css" rel="stylesheet">
-  <style>
-    /* por el punto al principio del selector, esta es una regla para una clase de nombre container */
-      .container{padding:1em 2em; margin:0;}
+  <link href="estilo.css" rel="stylesheet">
 
-    /* acá defino una regla que se aplica a los elementos header, section, footer */
-      header, section, footer{padding:5px;}
 
-    /* acá defino una relga que se aplica solo al elemento footer, que se agrega a lo definido en la regla anterior */
-      footer{margin-top:2em; border-top:1px solid #ddd; font-size:90%;}
 
-    /* acá defino una regla que se aplica al título de tercer nivel cuando está dentro de section */
-        section h3{margin-top:3em;}
-
-    /* acá defino una regla que se aplica a la imagen cuando está dentro de section */
-      section img{max-width: 100%;}
-
-    /* acá defino una regla que se aplica a la table cuando está dentro de section */
-      section table{border-collapse: collapse; margin-bottom: 1.5em;}
-
-    /* acá defino una regla que se aplica a la thead dentro de la table cuando está dentro de section */
-      section table thead{background:#eee;}
-
-    /* ¿y qué pasa en este caso? */
-      section table td, section table th{
-      	border:1px solid #ccc;
-        padding:10px;
-        margin:0;
-        text-align: left;
-        font-size:90%;
-      }
-
-    /*
-      Cuando pedían permiso de niños,
-      iban su papá y él decía que NO,
-      luego iban con su mamá y ella les decía que SI,
-      entonces SI lo hacían.
-      De la misma forma se comporta CSS,
-      se queda con lo último que le dicen.
-      Eso lo aprovecho acá
-    */
-
-      section table td:first-child, section table th:first-child{
-        text-align: center;
-      }
-
-      section table td:last-child, section table th:last-child{
-        padding-right:40px;
-      }
-
-    </style>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -72,7 +36,7 @@
       Segunda clase</h2>
     </header>
     <section>
-      <h3>Este es un título de tercer nivel</h3>
+      <h3>Cambiar este título y el párrafo que viene debajo</h3>
       <p>En <a href="http://lipsum.com/" target="_blank">lipsum.com</a> podemos obtener la cantidad de caracteres que queramos para un párrafo,
         varios párrafos, listados, etc. En este caso le pedí 500 bytes: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Vestibulum ullamcorper odio at magna ornare, nec elementum enim feugiat. Suspendisse potenti. Suspendisse cursus neque a
@@ -80,7 +44,7 @@
         Proin lacinia orci sit amet iaculis vehicula. Aliquam sit amet euismod risus, sodales scelerisque diam. Nullam urna purus,
         dictum sed ultricies eu, luctus quis est. Vestibulum arcu nibh, fringilla non posuere.</p>
       <figure>
-        <img src="http://lorempixel.com/800/400/city/" alt="imagen random de 800 x 600">
+        <img src="16886032146_f86dcbfc98_o.jpg" alt="golondrinas">
         <figcaption>También existe un "Loren Ipsum de imágenes", se llama <a href="http://lorempixel.com/" target="_blank">lorempixel.com</a></figcaption>
       </figure>
 
@@ -115,7 +79,7 @@
       <th>1</th>
       <td>DE LA HOZ ARMIJO</td>
       <td>JORDANNA DOMINICKE</td>
-      <td><a href="https://jordanna212.github.io/hello-world/">https://jordanna212.github.io/hello-world/</a></td>
+      <td><a href="https://jordanna212.github.io/hello-world/" rel="unfollow" title="desde Github" target="_blank">https://jordanna212.github.io/hello-world/</a></td>
     </tr>
     <tr>
       <th>2</th>
@@ -178,7 +142,7 @@
 
 </section>
 <footer>
-<p><a href="mailto:tucorreo@uc.cl">Nombre Apellido</a> | 15 de marzo, 2017</p>
+<p><a href="mailto:melarrain@uc.cl">Fernanda Larrain</a> | 15 de marzo, 2017</p>
 </footer>
 </div>
 
