Fin de la clase

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       Segunda clase</h2>
     </header>
     <section>
-      <h3>Cambiar este título y el párrafo que viene debajo</h3>
+      <h3>Soy el primer título de un párrafo</h3>
       <p>En <a href="http://lipsum.com/" target="_blank">lipsum.com</a> podemos obtener la cantidad de caracteres que queramos para un párrafo,
         varios párrafos, listados, etc. En este caso le pedí 500 bytes: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Vestibulum ullamcorper odio at magna ornare, nec elementum enim feugiat. Suspendisse potenti. Suspendisse cursus neque a
